<resources>
    <string name="app_title">IotSystem</string>
    <string name="add_device_title">Device configuring</string>
    <string name="first_fragment_label">MQTT Setup</string>
    <string name="second_fragment_label">System Setup</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="add_system">Add system</string>
    <string name="switch_page">Switch page</string>
    <string name="add_mqtt_broaker_connection">Add MQTT Broaker Connection</string>
    <string name="MqttIp">IP Address or Domain</string>
    <string name="Username">Login</string>
    <string name="password">Password</string>
    <string name="skip">Skip</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="systems_list">Systems list</string>
    <string name="image_first_fragment_description">image of IoT</string>
    <string name="On_off">Off/On led</string>
    <string name="add_another_device">Add device</string>
    <string name="app_name">IotSystem</string>
    <string name="devices">Smart devices</string>
    <string name="no_devices">No devices</string>
    <string name="no_systems">No systems</string>
    <string name="add_img_device">Change device image</string>
    <string name="friendly_name_hint">Friendly name</string>
    <string name="device_id_hint">Device ieeeid</string>
    <string name="device_type_hint">Device type</string>
    <string name="device_save">Save device</string>
    <string name="port">Port</string>
    <string name="system_name">Configure system</string>
    <string name="system_name_hint">System name</string>
    <string name="mqtt_prefix_hint">Mqtt prefix</string>
    <string name="device_switch_channel">Diode channel or smth that can switch</string>
    <string name="no_devices_in_system">No devices</string>
</resources>