<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <LinearLayout
            android:id="@+id/linearlay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/borders"
            android:baselineAligned="true"
            android:orientation="vertical"
            android:outlineProvider="bounds"
            android:padding="10dp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imgView"
                android:layout_width="match_parent"
                android:layout_height="188dp"
                android:contentDescription="@string/image_first_fragment_description"
                android:scaleType="fitCenter"
                android:src="@drawable/computer_icons" />

            <TextView
                android:id="@+id/textViewSystemName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-medium"
                android:lineSpacingExtra="8sp"
                android:text="@string/system_name"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold"
                android:typeface="normal" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputSystemName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textEditSystemName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/system_name_hint" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <Button
            android:id="@+id/button_save"
            android:layout_width="260dp"
            android:layout_height="60dp"
            android:layout_marginTop="32dp"
            android:layout_weight="1"
            android:text="@string/save"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearlay" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>